--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,6 +1,15 @@
 body
 {
-    color: orchid;
+    color: #333;
     text-align: center;
     font-family: "Arial";
+}
+
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #ddd;
+    margin: 0 auto;
 }
